--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,6 @@
 {
   "name": "ionic-photo-gallery",
   "integrations": {},
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "pro_id": "675ad7eb"
 }
